--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "@reason-react-native/clipboard",
+  "description": "ReScript bindings for @react-native-community/clipboard.",
   "version": "1.5.0",
   "publishConfig": {
     "access": "public"
