--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@reason-react-native/clipboard",
+  "name": "@rescript-react-native/clipboard",
   "description": "ReScript bindings for @react-native-community/clipboard.",
   "version": "1.5.1",
   "publishConfig": {
@@ -8,20 +8,18 @@
   "peerDependencies": {
     "@react-native-community/clipboard": "^1.5.0"
   },
-  "repository": "https://github.com/reason-react-native/clipboard.git",
+  "repository": "https://github.com/rescript-react-native/clipboard.git",
   "license": "MIT",
   "keywords": [
     "rescript",
-    "reason",
-    "reasonml",
-    "bucklescript",
     "react-native",
     "clipboard"
   ],
   "files": [
     "*.md",
     "bsconfig.json",
-    "src/**/*.re",
+    "src/**/*.res",
+    "src/**/*.resi",
     "src/**/*.js",
     "!src/**/*.bs.js"
   ],
@@ -38,7 +36,7 @@
     "release": "npmpub"
   },
   "devDependencies": {
-    "bs-platform": "^8.2.0",
+    "bs-platform": "^9.0.0",
     "husky": "^4.0.0",
     "lint-staged": "^10.0.0",
     "npmpub": "^5.0.0",
