--- a/bsconfig.json
+++ b/bsconfig.json
@@ -1,9 +1,6 @@
 {
-  "name": "@reason-react-native/clipboard",
-  "refmt": 3,
-  "reason": {
-    "react-jsx": 3
-  },
+  "name": "@rescript-react-native/clipboard",
+  "reason": { "react-jsx": 3 },
   "package-specs": {
     "module": "commonjs",
     "in-source": true
